--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "phlak/strgen": "^3.0",
         "gpslab/base64uid": "dev-master",
         "annexare/countries-list": "^2.6.1",
-        "ezyang/htmlpurifier": "^v4.13.0"
+        "ezyang/htmlpurifier": "^v4.13.0",
+        "fightbulc/moment": "dev-master"
     },
     "require-dev": {
 
