--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "nahid/jsonq": "dev-master",
         "nahid/qarray": "^2.0.0",
         "cerbero/json-objects": "^1.2.0",
-        "josantonius/json": "*@dev"
+        "josantonius/json": "*@dev",
+        "sokil/php-isocodes": "^3.3"
     },
     "require-dev": {
         "symfony/var-dumper": "^5.2"
