--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     ],
     "require": {
         "ext-gd": "*",
+        "ext-dom": "*",
+        "ext-libxml": "*",
         "adbario/php-dot-notation": "^2.2",
         "jasny/dotkey": "dev-master",
         "ichtrojan/laravel-otp": "dev-master",
